--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer utilities {
+    .nav {
+        @apply flex justify-center items-center border no-underline text-white hover:text-white focus:text-white active:text-white focus:bg-sky-700;
+    }
+}
